# abu2024_ws

./: README.md  bringdown.desktop  bringup.desktop  docker-compose.yaml
docker/: Dockerfile  entrypoint.sh
docker_uros/: Dockerfile  micro-ros_entrypoint.sh
firmware/: platformio.ini
firmware/Example/: colorDetect.cpp  main drive.cpp  main gripper.cpp  rgb.cpp  setServo.cpp
firmware/config/: config.h
firmware/config/custom/: drive.h  drive_input.h  drive_output.h  gripper.h  robot.h
firmware/lib/kinematics/: default_kinematics.cpp  default_kinematics.h  kinematics.h  kinematics_interface.cpp  kinematics_interface.h
firmware/lib/motor/: default_motor.h  motor.h
firmware/lib/pid/: pid.cpp
firmware/src/: main.cpp
robot_ws/src/abu_core/: CMakeLists.txt
robot_ws/src/abu_core/config/: config.yaml  ekf.yaml  ekf2.yaml  navigation.yaml  sim_locations.yaml
robot_ws/src/abu_core/include/tb3_autonomy/: autonomy_node.h  navigation_behaviors.h
robot_ws/src/abu_core/launch/: bringup.launch.py  detection.launch.py  lidar.launch.py  localization.launch.py  microros.launch.py  navigation.launch.py  rgbd.launch.py  slam.launch.py
robot_ws/src/abu_core/rviz/: navigation.rviz
robot_ws/src/abu_core/scripts/: ball_detection.py  ball_model copy.py  ball_model.py  ball_silo.py  imu_calibration.py  imu_euler.py  lidar_filter.py  line_detection.py  nav2_control.py  robot_main_state copy.py  robot_main_state.py
robot_ws/src/abu_core/src/: autonomy_node.cpp  detection.cpp  navigation_behaviors.cpp
robot_ws/src/abu_description/config/: controllers.yaml  ekf.yaml
robot_ws/src/abu_description/launch/: description.launch.py  gazebo.launch.py  rtabmap.launch.py
robot_ws/src/abu_description/maps/: map3.pgm
robot_ws/src/abu_description/urdf/: base.urdf.xacro  drive.urdf.xacro  robot_control.urdf.xacro
robot_ws/src/abu_description/urdf/model/: 1.25.stl  auto-machanic-karn.stl  base.dae  gripper-2.stl  tele_hand_left.dae  wheel_real.dae
robot_ws/src/abu_description/urdf/telescope/: silder_1.urdf.xacro  silder_2.urdf.xacro  tele_hand.urdf.xacro
robot_ws/src/abu_description/worlds/: abu2024_no_model.world
robot_ws/src/sllidar_ros2-main/launch/: sllidar_a3_launch.py
src/abu_core/: CMakeLists.txt  package.xml  setup.py
src/abu_core/config/: config.yaml  ekf.yaml  navigation.yaml
src/abu_core/include/RobotControl/: ManualControl.h
src/abu_core/launch/: bringup.launch.py  bt.launch.py  detection.launch.py  joy.launch.py  localization.launch.py  navigation.launch.py  rgbd.launch.py  silo.launch.py  state.launch.py
src/abu_core/rviz/: navigation.rviz  slam.rviz
src/abu_core/scripts/: ball_detection copy.py  ball_detection.py  cam.py  find_color.py  imu.py  lidar_filter.py  nav2_control.py  robot_main_state.py  robot_state.py  silo_broadcaster.py  silo_listener.py
src/abu_core/src/: ManualControl.cpp  joy_drive.cpp  pub.cpp
src/abu_description/: CMakeLists.txt  package.xml
src/abu_description/config/: ekf.yaml  navigation.yaml
src/abu_description/launch/: description.launch.py  gazebo.launch.py  moveit.launch.py  navigation.launch.py  rtabmap.launch.py
src/abu_description/maps/: red.pgm  test.pgm  test2.pgm  test2.yaml
src/abu_description/src/: gripper_control.py  seed_detection.py  teleop_twist_keyboard.py
src/abu_description/urdf/: dir_wheel.urdf.xacro  drive.urdf.xacro  properties.urdf.xacro  properties.urdf_copy.xacro  robot.urdf.xacro  robot.urdf_copy.xacro  robot_control.urdf.xacro  rot_wheel.urdf.xacro
src/abu_description/urdf/gripper/: gripper.urdf.xacro  gripper_df1.urdf.xacro  gripper_df2.urdf.xacro  gripper_hand.urdf.xacro  gripper_wrist.urdf.xacro
src/abu_description/urdf/model/: C-part.stl  body1.stl  gripper-1.stl  silder_1.dae  silder_2.dae  silder_wrist.dae  tele_hand_right.dae  wheel_real.stl
src/abu_description/urdf/swerve_wheel/: dir_wheel.urdf.xacro  steering.urdf.xacro
src/abu_description/urdf/telescope/: silder_wrist.urdf.xacro
src/abu_description/worlds/: abu2024_ball_blue.world  abu2024_seed_blue.world  abu2024_seed_red.world
src/abu_description/worlds/seed_blue/: model.sdf
src/abu_description/worlds/seed_red/: model.sdf
src/abu_moveit_config/: .setup_assistant
src/panda_moveit_config/: .setup_assistant  package.xml
src/panda_moveit_config/config/: moveit_controllers.yaml  panda.srdf  ros2_controllers.yaml
src/panda_moveit_config/launch/: demo.launch.py
src/sllidar_ros2-main/sdk/include/: sl_lidar_driver.h
src/sllidar_ros2-main/src/: sllidar_node.cpp
